# bitcask

./: .clang-format  CMakeLists.txt  LICENSE  README.md  llvm-toolchain.cmake
.github/workflows/: cmake.yml
include/bitcask/: bitcask.h  errors.h  format.h
src/: bitcask.cc  errors.cc  util.h
test/: CMakeLists.txt  temp_directory.h  tests.cpp
